Update flame 1 and flame 4

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     </div>
   </section>
 
-<script type="text/javascript" src="js/jquery-2.2.3.min.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/wow.min.js"></script>
+<script type="text/javascript" src="js/lib/jquery-2.2.3.min.js"></script>
+<script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/lib/wow.min.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
