Update flame 1 and flame 4

--- a/frame1.html
+++ b/frame1.html
@@ -80,73 +80,74 @@
           </div>
         </button>
         <div data-seq class="seq-feature seq-full">
-          <div style="background-image: url(images/flame/bg-flame1.jpg)">
+          <div style="background-image: url(images/frame/bg-frame1.jpg)">
             <!-- This image is hidden via CSS and is only here for accessibility. The image shown is actually a background-image set via an inline style above -->
-            <img src="images/flame/bg-flame1.jpg" alt="Khám phá SAI GON CENTER"/>
+            <img src="images/frame/bg-frame1.jpg" alt="Khám phá SAI GON CENTER"/>
           </div>
         </div>
         <div data-seq class="seq-content seq-content-left seq-half seq-valign">
-          <div class="flame1">
-            <h2 class="title-flame1">Khám phá</h2>
+          <div class="frame1">
+            <h2 class="title-frame1">Khám phá</h2>
 
-            <h2 class="sub-title-flame1">Saigon center</h2>
+            <h2 class="sub-title-frame1">Saigon center</h2>
 
-            <h3 class="description-flame1">Qua từng mảnh ghép <br/> trong 28 ngày bất ngờ</h3>
+            <h3 class="description-frame1">Qua từng mảnh ghép <br/> trong 28 ngày bất ngờ</h3>
 
-            <ul role="navigation" aria-label="Pagination" class="seq-pagination">
-              <li>
-                <a class="view-gallery seq-next" href="#">Sưu tập mảnh ghép</a>
-              </li>
-            </ul>
+            <a class="view-gallery seq-next" href="#">Sưu tập mảnh ghép</a>
+
+            <!--<ul role="navigation" aria-label="Pagination" class="seq-pagination">-->
+              <!--<li>-->
+              <!--</li>-->
+            <!--</ul>-->
           </div>
         </div>
       </li>
       <li id="step2" class="step2">
         <div data-seq class="seq-feature seq-full ">
-          <div style="background-image: url(images/flame/bg-flame2.jpg)">
+          <div style="background-image: url(images/frame/bg-frame2.jpg)">
             <!-- This image is hidden via CSS and is only here for accessibility. The image shown is actually a background-image set via an inline style above -->
-            <img src="images/flame/bg-flame2.jpg" alt="Sưu tầm mảnh ghép"/>
+            <img src="images/frame/bg-frame2.jpg" alt="Sưu tầm mảnh ghép"/>
           </div>
         </div>
         <div data-seq class="seq-content seq-content-right seq-half seq-valign">
-          <div class="flame2">
-            <h2 class="title-flame2">Sưu tập mảnh ghép</h2>
+          <div class="frame2">
+            <h2 class="title-frame2">Sưu tập mảnh ghép</h2>
 
-            <p class="flame2-content">Từ ngày 11/07 tới ngày 07/08, mỗi ngày Saigon Center mang tới một câu hỏi thú vị
+            <p class="frame2-content">Từ ngày 11/07 tới ngày 07/08, mỗi ngày Saigon Center mang tới một câu hỏi thú vị
               với những món quà sẽ khiến bạn bất ngờ. Tham gia thử thách mỗi ngày để nhận được những chiếc huy hiệu quý
               giá cho cuộc thi Offline 'The Crazy Race' sẽ được tổ chức vào ngày 14/08.</p>
 
-            <a class="btn-flame2 seq-next" href="#">28 ngày bất ngờ</a>
-            <a class="btn-flame2" href="#">The crazy race</a>
+            <a class="btn-frame2 seq-next" href="#">28 ngày bất ngờ</a>
+            <a class="btn-frame2" href="#">The crazy race</a>
           </div>
         </div>
       </li>
       <li id="step3" class="step3">
         <div data-seq class="seq-feature seq-full ">
-          <div style="background-image: url(images/flame/bg-flame3.jpg)">
+          <div style="background-image: url(images/frame/bg-frame3.jpg)">
             <!-- This image is hidden via CSS and is only here for accessibility. The image shown is actually a background-image set via an inline style above -->
-            <img src="images/flame/bg-flame3.jpg" alt="Khám phá mảnh ghép"/>
+            <img src="images/frame/bg-frame3.jpg" alt="Khám phá mảnh ghép"/>
           </div>
         </div>
       </li>
       <li id="step4" class="step4">
         <div data-seq class="seq-feature seq-full ">
-          <div style="background-image: url(images/flame/bg-flame4.jpg)">
+          <div style="background-image: url(images/frame/bg-frame4.jpg)">
             <!-- This image is hidden via CSS and is only here for accessibility. The image shown is actually a background-image set via an inline style above -->
-            <img src="images/flame/bg-flame4.jpg" alt="Bộ Sưu Tập"/>
+            <img src="images/frame/bg-frame4.jpg" alt="Bộ Sưu Tập"/>
           </div>
         </div>
         <div data-seq class="seq-content seq-half seq-half-left seq-valign">
-          <div class="flame4">
-            <h2 class="title-flame4">The Crazy Race</h2>
+          <div class="frame4">
+            <h2 class="title-frame4">The Crazy Race</h2>
 
-            <p class="flame4-content">50 bạn sưu tập trên 14 mảnh ghép bất ngờ có cơ hội được lựa chọn để tham gia cuộc
+            <p class="frame4-content">50 bạn sưu tập trên 14 mảnh ghép bất ngờ có cơ hội được lựa chọn để tham gia cuộc
               thi The Crazy Race tại
               trung tâm thương maik Saigon Center vào ngày 14/8/2016 cùng với 1 người bạn của mình. Nhiều thử thách bất
               ngờ cùng các phần quà hấp dẫn chờ đón các bạn!</p>
 
-            <a class="btn-flame4" href="#">Sưu tập mảnh ghép</a>
-            <a class="btn-flame4" href="#">Nội dung chương trình</a>
+            <a class="btn-frame4" href="#">Sưu tập mảnh ghép</a>
+            <a class="btn-frame4" href="#">Nội dung chương trình</a>
           </div>
         </div>
       </li>
