--- a/frame1.html
+++ b/frame1.html
@@ -68,7 +68,7 @@
 
   <div class="seq-screen">
     <ul class="seq-canvas">
-      <li id="step1" class="step1 seq-in">
+      <li id="step1" class="step1 ">
         <button class="seq-next-button seq-next" type="button" aria-label="Next">
           <div class="mouse_scroll">
             <div class="mouse">
@@ -122,33 +122,48 @@
           </div>
         </div>
       </li>
-      <li id="step3" class="step3">
+      <li id="step3" class="step3 seq-in">
         <div data-seq class="seq-feature seq-full ">
           <div style="background-image: url(images/frame/bg-frame3.jpg)">
             <!-- This image is hidden via CSS and is only here for accessibility. The image shown is actually a background-image set via an inline style above -->
             <img src="images/frame/bg-frame3.jpg" alt="Khám phá mảnh ghép"/>
           </div>
         </div>
-        <div data-seq class="seq-content seq-full seq-valign step3-bg" style="background-image: url(images/frame/bg-frame3-1.png)">
+        <div data-seq class="seq-content seq-full seq-valign step3-bg"
+             style="background-image: url(images/frame/bg-frame3-1.png); display: none;">
           <div class="frame3">
             <a href="#" class="logo-event"><img src="images/event/logo-event.png" alt=""/></a>
 
             <div class="carousel">
-              <a href="#"><img src="images/event/event1.png" alt="Image 1" /></a>
-              <a href="#"><img src="images/event/event1.png" alt="Image 1" /></a>
-              <a href="#"><img src="images/event/event1.png" alt="Image 1" /></a>
-              <a href="#"><img src="images/event/event1.png" alt="Image 1" /></a>
-              <a href="#"><img src="images/event/event1.png" alt="Image 1" /></a>
-              <a href="#"><img src="images/event/event1.png" alt="Image 1" /></a>
-              <a href="#"><img src="images/event/event1.png" alt="Image 1" /></a>
+              <a href="#"><img src="images/event/event1.png" alt="Image 1"/></a>
+              <a href="#"><img src="images/event/event1.png" alt="Image 1"/></a>
+              <a href="#"><img src="images/event/event1.png" alt="Image 1"/></a>
+              <a href="#"><img src="images/event/event1.png" alt="Image 1"/></a>
+              <a href="#"><img src="images/event/event1.png" alt="Image 1"/></a>
+              <a href="#"><img src="images/event/event1.png" alt="Image 1"/></a>
+              <a href="#"><img src="images/event/event1.png" alt="Image 1"/></a>
             </div>
 
             <div class="promotion-block">
               <i class="icon-device"></i>
+
               <h2 class="title-frame3">Khám phá mảnh ghép hôm nay</h2>
+
               <h3 class="description-frame3">
                 Cơ hội để nhận voucher 1.000.000 VND!
               </h3>
+            </div>
+          </div>
+        </div>
+        <div data-seq class="seq-content seq-full seq-valign step3-bg"
+             style="background-image: url(images/dialog/bg-gallery.jpg); display: block">
+          <div class="seq-content seq-content-right seq-half seq-valign frame3-gallery">
+            <div class="frame3-gallery" style="">
+              <h2 class="title-gallery" style="">Bộ sưu tập</h2>
+
+              <h3 class="description-frame1" style="">Qua từng mảnh ghép <br style=""> trong 28 ngày bất ngờ</h3>
+
+              <a href="#" class="view-gallery seq-next" style="">Sưu tập mảnh ghép</a>
             </div>
           </div>
         </div>
