--- a/frame1.html
+++ b/frame1.html
@@ -34,7 +34,7 @@
   </div>
 
   <div class="login-face">
-    <a href="#" class="btn-login">Log in with facebook</a>
+    <a href="#" class="btn-login open">Log in with facebook</a>
   </div>
 
   <div class="seq-nav">
@@ -80,7 +80,7 @@
           </div>
         </button>
         <div data-seq class="seq-feature seq-full">
-          <div style="background-image: url(images/frame/bg-frame1.jpg)">
+          <div style="background-image: url(images/frame/bg-frame1.jpg);">
             <!-- This image is hidden via CSS and is only here for accessibility. The image shown is actually a background-image set via an inline style above -->
             <img src="images/frame/bg-frame1.jpg" alt="Khám phá SAI GON CENTER"/>
           </div>
@@ -94,11 +94,6 @@
             <h3 class="description-frame1">Qua từng mảnh ghép <br/> trong 28 ngày bất ngờ</h3>
 
             <a class="view-gallery seq-next" href="#">Sưu tập mảnh ghép</a>
-
-            <!--<ul role="navigation" aria-label="Pagination" class="seq-pagination">-->
-            <!--<li>-->
-            <!--</li>-->
-            <!--</ul>-->
           </div>
         </div>
       </li>
@@ -113,12 +108,149 @@
           <div class="frame2">
             <h2 class="title-frame2">Sưu tập mảnh ghép</h2>
 
-            <p class="frame2-content">Từ ngày 11/07 tới ngày 07/08, mỗi ngày Saigon Center mang tới một câu hỏi thú vị
+            <div class="frame2-content">Từ ngày 11/07 tới ngày 07/08, mỗi ngày Saigon Center mang tới một câu hỏi thú vị
               với những món quà sẽ khiến bạn bất ngờ. Tham gia thử thách mỗi ngày để nhận được những chiếc huy hiệu quý
-              giá cho cuộc thi Offline 'The Crazy Race' sẽ được tổ chức vào ngày 14/08.</p>
+              giá cho cuộc thi Offline 'The Crazy Race' sẽ được tổ chức vào ngày 14/08.
+            </div>
 
-            <a class="btn-frame2 seq-next" href="#">28 ngày bất ngờ</a>
-            <a class="btn-frame2" href="#">The crazy race</a>
+            <ul role="navigation" aria-label="Pagination" class="frame2-group seq-pagination">
+              <li>
+              </li>
+              <li>
+              </li>
+              <li>
+                <a class="btn-frame2 text-left" href="#">28 ngày bất ngờ</a>
+              </li>
+              <li>
+                <a class="btn-frame2 text-right" href="#">The crazy race</a>
+              </li>
+            </ul>
+
+            <div class="panel-group" role="tablist" aria-multiselectable="true" id="group-description">
+              <div class="panel gs-panel">
+                <div class="panel-heading" role="tab" id="headingGroup1">
+                  <h4 class="panel-title">
+                    <a role="button" data-toggle="collapse" data-parent="#group-description" href="#group1"
+                       aria-expanded="true" aria-controls="group1">
+                      <i class="panel-arrow"></i> <span>Ba bước tham gia đơn giản</span>
+                    </a>
+                  </h4>
+                </div>
+                <div id="group1" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingGroup1">
+                  <div class="panel-body">
+                    <div class="row">
+                      <div class="col-md-4">
+                        <div class="content-group1">
+                          <a href="#"><i class="icon-home"></i></a>
+
+                          <p class="content-group">
+                            Truy cập website <a class="link-group"
+                                                href="http://saigoncentre.com.vn">saigoncentre.com.vn</a> và vào trang
+                            ‘28 Days of Surprise'.
+                          </p>
+                        </div>
+                      </div>
+                      <div class="col-md-4">
+                        <div class="content-group1">
+                          <a href="#"><i class="icon-facebook"></i></a>
+
+                          <p class="content-group">
+                            Đăng nhập bằng tài khoản Facebook để tham gia giải câu hỏi
+                          </p>
+                        </div>
+                      </div>
+                      <div class="col-md-4">
+                        <div class="content-group1">
+                          <a href="#"><i class="icon-question"></i></a>
+
+                          <p class="content-group">
+                            Trả lời mảnh ghép tương ứng với mỗi câu hỏi để nhận phần quà bất ngờ
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="panel gs-panel">
+                <div class="panel-heading" role="tab" id="headingGroup2">
+                  <h4 class="panel-title">
+                    <a class="collapsed" role="button" data-toggle="collapse"
+                       data-parent="#group-description"
+                       href="#group2" aria-expanded="false"
+                       aria-controls="group2">
+                      <i class="panel-arrow"></i> <span>Những điều cần biết</span>
+                    </a>
+                  </h4>
+                </div>
+                <div id="group2" class="panel-collapse collapse"
+                     role="tabpanel"
+                     aria-labelledby="headingGroup2">
+                  <div class="panel-body">
+                    <div class="row">
+                      <div class="col-md-12">
+                        <div class="content-group2">
+                          <p class="content-group">
+                            1. Mảnh ghép ẩn chứa câu hỏi sẽ được mở ra trên website vào lúc 10h sáng mỗi ngày từ ngày
+                            11/07/2016 đến 07/08/2016.
+                          </p>
+
+                          <p class="content-group">
+                            2. Bạn chỉ có duy nhất 1 cơ hội trả lời câu hỏi, vì thế hãy kiểm tra thật kỹ và chắc chắn
+                            rằng
+                            đó là đáp án cuối cùng của bạn.
+                          </p>
+
+                          <p class="content-group">
+                            3. Khi trả lời xong câu hỏi, nếu đúng bạn sẽ được nhận 1 huy hiệu bỏ vào Giỏ sưu tập của
+                            bạn. Bạn phải sưu tầm ít nhất 14 huy hiệu mới đủ điều kiện vào vòng trong 'The Crazy Race'.
+                          </p>
+
+                          <p class="content-group">
+                            4. Mỗi ngày nếu bạn trả lời đúng câu hỏi, bạn sẽ có cơ hội được nhận phần quà bất ngờ tương
+                            ứng với ngày đó.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="panel gs-panel">
+                <div class="panel-heading" role="tab" id="headingGroup3">
+                  <h4 class="panel-title">
+                    <a class="collapsed" role="button" data-toggle="collapse"
+                       data-parent="#group-description"
+                       href="#group3" aria-expanded="false"
+                       aria-controls="group3">
+                      <i class="panel-arrow"></i> <span>Những câu hỏi thường gặp</span>
+                    </a>
+                  </h4>
+                </div>
+                <div id="group3" class="panel-collapse collapse"
+                     role="tabpanel"
+                     aria-labelledby="headingGroup3">
+                  <div class="panel-body">
+                    <div class="row">
+                      <div class="col-md-12">
+                        <div class="content-group3">
+                          <p class="content-group">
+                            <span class="question">1. Các câu hỏi dưới dạng gì? Có khó không?</span>
+                            Câu hỏi dưới hình thức trắc nghiệm để bạn lựa chọn 1 trong 4 phương án trả lời. Bạn sẽ được
+                            cung cấp những manh mối liên quan tới những nhãn hàng đã và sắp có mặt tại Saigon Center.
+                          </p>
+
+                          <p class="content-group">
+                            <span class="question">2. Tôi có thể sửa đáp án được không?</span>
+                            Bạn chỉ được trả lời câu hỏi của ngày 1 lần duy nhất. Vì thế, bạn hãy chắc chắn với phương
+                            án cuối cùng của mình. </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </li>
@@ -135,13 +267,11 @@
             <a href="#" class="logo-event"><img src="images/event/logo-event.png" alt=""/></a>
 
             <div class="carousel">
-              <a href="#"><img src="images/event/event1.png" alt="Image 1"/></a>
-              <a href="#"><img src="images/event/event1.png" alt="Image 1"/></a>
-              <a href="#"><img src="images/event/event1.png" alt="Image 1"/></a>
-              <a href="#"><img src="images/event/event1.png" alt="Image 1"/></a>
-              <a href="#"><img src="images/event/event1.png" alt="Image 1"/></a>
-              <a href="#"><img src="images/event/event1.png" alt="Image 1"/></a>
-              <a href="#"><img src="images/event/event1.png" alt="Image 1"/></a>
+              <div class="isOpen"><a href="#1"><img src="images/event/event1.png" alt="Image 1"/></a></div>
+              <div class="isOver"><a href="#2"><img src="images/event/event2.png" alt="Image 2"/></a></div>
+              <div class="isLog"><a href="#3"><img src="images/event/event3.png" alt="Image 3"/></a></div>
+              <div class="isLog"><a href="#4"><img src="images/event/event4.png" alt="Image 4"/></a></div>
+              <div class="isLog"><a href="#5"><img src="images/event/event5.png" alt="Image 5"/></a></div>
             </div>
 
             <div class="promotion-block">
@@ -156,7 +286,7 @@
           </div>
         </div>
         <div data-seq class="seq-content seq-full seq-valign step3-bg"
-             style="background-image: url(images/dialog/bg-gallery.jpg); display: block">
+             style="background-image: url(images/dialog/bg-gallery.jpg); display: inherit">
           <div class="seq-content seq-content-right seq-half seq-valign frame3-gallery">
             <div class="frame3-gallery" style="">
               <h2 class="title-gallery" style="">Bộ sưu tập</h2>
@@ -225,10 +355,27 @@
   </div>
 </section>
 
+<div id="loginWithFacebook" class="dialog">
+  <div class="dialog-overlay"></div>
+  <div class="dialog-content">
+    <div class="dialog-header">
+      <i class="icon-lock"></i>
+      <h2 class="title-login">Mời bạn đăng nhập facebook <br/> trước khi trả lời câu hỏi</h2>
+      <i class="icon-facebook-dialog"></i>
+      <a href="#" class="btn-login"><span>Đăng nhập facebook</span></a>
+    </div>
+    <div class="dialog-footer">
+      <a href="#" class="close-dialog btn-close-login">Đóng</a>
+    </div>
+  </div>
+</div>
+
+
 <script type="text/javascript" src="js/lib/jquery-2.2.3.min.js"></script>
 <script type="text/javascript" src="js/lib/jquery.easing.min.js"></script>
 <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/lib/wow.min.js"></script>
+<script type="text/javascript" src="js/lib/jquery.slimscroll.min.js"></script>
 <script src="js/lib/imagesloaded.pkgd.min.js"></script>
 <script src="js/lib/hammer.min.js"></script>
 <script src="js/lib/sequence.min.js"></script>
