--- a/frame1.html
+++ b/frame1.html
@@ -262,7 +262,7 @@
           </div>
         </div>
         <div data-seq class="seq-content seq-full seq-valign step3-bg"
-             style="background-image: url(images/frame/bg-frame3-1.png); display: none;">
+             style="background-image: url(images/frame/bg-frame3-1.png);">
           <div class="frame3">
             <a href="#" class="logo-event"><img src="images/event/logo-event.png" alt=""/></a>
 
@@ -282,18 +282,6 @@
               <h3 class="description-frame3">
                 Cơ hội để nhận voucher 1.000.000 VND!
               </h3>
-            </div>
-          </div>
-        </div>
-        <div data-seq class="seq-content seq-full seq-valign step3-bg"
-             style="background-image: url(images/dialog/bg-gallery.jpg); display: inherit">
-          <div class="seq-content seq-content-right seq-half seq-valign frame3-gallery">
-            <div class="frame3-gallery" style="">
-              <h2 class="title-gallery" style="">Bộ sưu tập</h2>
-
-              <h3 class="description-frame1" style="">Qua từng mảnh ghép <br style=""> trong 28 ngày bất ngờ</h3>
-
-              <a href="#" class="view-gallery seq-next" style="">Sưu tập mảnh ghép</a>
             </div>
           </div>
         </div>
@@ -360,12 +348,41 @@
   <div class="dialog-content">
     <div class="dialog-header">
       <i class="icon-lock"></i>
+
       <h2 class="title-login">Mời bạn đăng nhập facebook <br/> trước khi trả lời câu hỏi</h2>
       <i class="icon-facebook-dialog"></i>
-      <a href="#" class="btn-login"><span>Đăng nhập facebook</span></a>
+      <a href="#" class="btn-login-with-facebook"><span>Đăng nhập facebook</span></a>
     </div>
     <div class="dialog-footer">
-      <a href="#" class="close-dialog btn-close-login">Đóng</a>
+      <a href="#" class="close-dialog-login btn-close-login">Đóng</a>
+    </div>
+  </div>
+</div>
+
+<div id="dialogGallery" class="dialog">
+  <div class="dialog-overlay"></div>
+  <div class="dialog-content">
+    <div class="gallery-background" style="background-image: url(images/dialog/bg-gallery.jpg);">
+      <div class="row">
+        <div class="col-md-6 col-md-offset-6">
+          <div class="gallery-content">
+            <div class="group-gallery">
+              <i class="icon-gallery"></i>
+              <h2 class="title-gallery" style="">Bộ sưu tập</h2>
+
+              <div class="total-gallery">
+                <h3 class="title-total-gallery">Bạn đã thu thập được</h3>
+                <div class="result">
+                  <span>14/28</span>
+                  mảnh ghép
+                </div>
+              </div>
+
+              <a href="#" class="btn-gallery" style="">Chia sẻ</a>
+              <a href="#" class="btn-gallery close-dialog-gallery" style="">Đóng</a>
+            </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
