Update question in frame 3

--- a/frame1.html
+++ b/frame1.html
@@ -261,30 +261,169 @@
             <img src="images/frame/bg-frame3.jpg" alt="Khám phá mảnh ghép"/>
           </div>
         </div>
-        <div data-seq class="seq-content seq-full seq-valign step3-bg"
-             style="background-image: url(images/frame/bg-frame3-1.png);">
+        <div data-seq class="seq-content seq-full">
           <div class="frame3">
             <a href="#" class="logo-event"><img src="images/event/logo-event.png" alt=""/></a>
 
-            <div class="carousel">
-              <div class="isOpen"><a href="#1"><img src="images/event/event1.png" alt="Image 1"/></a></div>
-              <div class="isOver"><a href="#2"><img src="images/event/event2.png" alt="Image 2"/></a></div>
-              <div class="isLog"><a href="#3"><img src="images/event/event3.png" alt="Image 3"/></a></div>
-              <div class="isLog"><a href="#4"><img src="images/event/event4.png" alt="Image 4"/></a></div>
-              <div class="isLog"><a href="#5"><img src="images/event/event5.png" alt="Image 5"/></a></div>
+            <div class="question-list" style="background-image: url(images/frame/bg-frame3-1.png); display: none">
+              <div class="carousel">
+                <div class="isOpen"><a href="#1"><img src="images/event/event1.png" alt="Image 1"/></a></div>
+                <div class="isOver"><a href="#2"><img src="images/event/event2.png" alt="Image 2"/></a></div>
+                <div class="isLog"><a href="#3"><img src="images/event/event3.png" alt="Image 3"/></a></div>
+                <div class="isLog"><a href="#4"><img src="images/event/event4.png" alt="Image 4"/></a></div>
+                <div class="isLog"><a href="#5"><img src="images/event/event5.png" alt="Image 5"/></a></div>
+              </div>
+
+              <div class="promotion-block">
+                <i class="icon-device"></i>
+
+                <h2 class="title-frame3">Khám phá mảnh ghép hôm nay</h2>
+
+                <h3 class="description-frame3">
+                  Cơ hội để nhận voucher 1.000.000 VND!
+                </h3>
+              </div>
             </div>
+            <div class="question" style="display: none">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="content-block">
+                    <div class="wrapper-block">
+                      <div class="image-block">
+                        <a href="#" class="btn-back"><i class="icon-back"></i> <span>Trở lại</span></a>
+                        <img src="images/question/image-1.png" alt="Image 1"/>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="content-block">
+                    <div class="wrapper-block">
+                      <div class="question-block">
+                        <h2 class="question-title">Bạn có thể đoán ra được bất ngờ nào sẽ xuất hiện tại Saigon Center
+                          tuần tới?</h2>
 
-            <div class="promotion-block">
-              <i class="icon-device"></i>
+                        <p class="question-description">
+                          Đây là tuần lễ khai trương của một thương hiệu lần đầu tiên có mặt tại Việt Nam. <br/>
+                          Đây cũng là một thương hiệu nổi tiếng của Nhật theo mô hình Department Store.
+                        </p>
 
-              <h2 class="title-frame3">Khám phá mảnh ghép hôm nay</h2>
+                        <form>
+                          <div class="radio">
+                            <input type="radio" name="optionsRadios" id="value1" value="A">
+                            <label for="value1">
+                              <span><i>A</i></span>Takashimaya
+                            </label>
+                          </div>
+                          <div class="radio">
+                            <input type="radio" name="optionsRadios" id="value2" value="B">
+                            <label for="value2">
+                              <span><i>B</i></span>Superdry
+                            </label>
+                          </div>
+                          <div class="radio">
+                            <input type="radio" name="optionsRadios" id="value3" value="C">
+                            <label for="value3">
+                              <span><i>C</i></span>Marakume
+                            </label>
+                          </div>
+                          <div class="radio">
+                            <input type="radio" name="optionsRadios" id="value4" value="D">
+                            <label for="value4">
+                              <span><i>D</i></span>Momo Paradise
+                            </label>
+                          </div>
+                          <div class="form-group">
+                            <div class="col-md-12">
+                              <button type="submit" class="btn-submit">Xác nhận</button>
+                              <span class="note-form">(*) Bạn chỉ có thể trả lời một lần</span>
+                            </div>
+                          </div>
+                        </form>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="reward" style="display: none">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="content-block">
+                    <div class="wrapper-block">
+                      <div class="image-block">
+                        <a href="#" class="btn-back"><i class="icon-back"></i> <span>Trở lại</span></a>
+                        <img src="images/question/image-1.png" alt="Image 1"/>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="content-block">
+                    <div class="wrapper-block">
+                      <div class="reward-block">
+                        <h2 class="reward-title">Chúc mừng bạn đã trả lời chính xác!</h2>
 
-              <h3 class="description-frame3">
-                Cơ hội để nhận voucher 1.000.000 VND!
-              </h3>
+                        <p class="reward-description">
+                          Bạn nhận được một huy hiệu để bỏ vào bộ sưu tập.<br/>
+                          Đừng quên quay vào ngày mai để giải mã câu hỏi tiếp theo và xem kết quả nhận quà bất ngờ của
+                          ngày hôm nay không nhé? <br/>
+                          <i>Thu thập thêm 10 mảnh để có cơ hội tham gia <a href="#">'THE CRAZY RACE'</a></i>
+                        </p>
+
+                        <div class="reward-action">
+                          <a href="#" class="view-gallery btn-reward">Xem bộ sưu tập</a>
+                          <a href="#" class="share-facebook btn-reward">Chia sẻ facebook</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="lost" style="background-image: url(images/question/lost-bg.png); display: inherit">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="content-block">
+                    <div class="wrapper-block">
+                      <div class="image-block">
+                        <a href="#" class="btn-back"><i class="icon-back"></i> <span>Trở lại</span></a>
+                        <img src="images/question/image-1.png" alt="Image 1"/>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="content-block">
+                    <div class="wrapper-block">
+                      <div class="lost-block">
+                        <h2 class="lost-title">Rất tiếc bạn đã chọn câu trả lời sai!</h2>
+
+                        <h3 class="result-lost">
+                          Câu trả lời đúng là B
+                        </h3>
+
+                        <p class="lost-description">
+
+                          <i>Đừng quên quay vào ngày mai để giải mã câu hỏi tiếp theo và xem kết quả nhận quà bất ngờ
+                            của
+                            ngày hôm nay không nhé? <br/>
+                            Thu thập thêm 10 mảnh để có cơ hội tham gia <a href="#">'THE CRAZY RACE'</a></i>
+                        </p>
+
+                        <div class="lost-action">
+                          <a href="#" class="view-gallery btn-lost">Xem bộ sưu tập</a>
+                          <a href="#" class="share-facebook btn-lost">Chia sẻ facebook</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
+
       </li>
       <li id="step4" class="step4">
         <div data-seq class="seq-feature seq-full ">
@@ -368,10 +507,12 @@
           <div class="gallery-content">
             <div class="group-gallery">
               <i class="icon-gallery"></i>
+
               <h2 class="title-gallery" style="">Bộ sưu tập</h2>
 
               <div class="total-gallery">
                 <h3 class="title-total-gallery">Bạn đã thu thập được</h3>
+
                 <div class="result">
                   <span>14/28</span>
                   mảnh ghép
@@ -381,24 +522,24 @@
               <a href="#" class="btn-gallery" style="">Chia sẻ</a>
               <a href="#" class="btn-gallery close-dialog-gallery" style="">Đóng</a>
             </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
 
-<script type="text/javascript" src="js/lib/jquery-2.2.3.min.js"></script>
-<script type="text/javascript" src="js/lib/jquery.easing.min.js"></script>
-<script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/lib/wow.min.js"></script>
-<script type="text/javascript" src="js/lib/jquery.slimscroll.min.js"></script>
-<script src="js/lib/imagesloaded.pkgd.min.js"></script>
-<script src="js/lib/hammer.min.js"></script>
-<script src="js/lib/sequence.min.js"></script>
-<script src="js/lib/sequence-theme.two-up.min.js"></script>
-<script src="js/countdown.js"></script>
-<script src="js/carousel.js"></script>
-<script type="text/javascript" src="js/script.js"></script>
+  <script type="text/javascript" src="js/lib/jquery-2.2.3.min.js"></script>
+  <script type="text/javascript" src="js/lib/jquery.easing.min.js"></script>
+  <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
+  <script type="text/javascript" src="js/lib/wow.min.js"></script>
+  <script type="text/javascript" src="js/lib/jquery.slimscroll.min.js"></script>
+  <script src="js/lib/imagesloaded.pkgd.min.js"></script>
+  <script src="js/lib/hammer.min.js"></script>
+  <script src="js/lib/sequence.min.js"></script>
+  <script src="js/lib/sequence-theme.two-up.min.js"></script>
+  <script src="js/countdown.js"></script>
+  <script src="js/carousel.js"></script>
+  <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
