Update question in frame 3

--- a/frame1.html
+++ b/frame1.html
@@ -265,13 +265,13 @@
           <div class="frame3">
             <a href="#" class="logo-event"><img src="images/event/logo-event.png" alt=""/></a>
 
-            <div class="question-list" style="background-image: url(images/frame/bg-frame3-1.png); display: none">
+            <div class="question-list" style="background-image: url(images/frame/bg-frame3-1.png); display: inherit">
               <div class="carousel">
-                <div class="isOpen"><a href="#1"><img src="images/event/event1.png" alt="Image 1"/></a></div>
-                <div class="isOver"><a href="#2"><img src="images/event/event2.png" alt="Image 2"/></a></div>
-                <div class="isLog"><a href="#3"><img src="images/event/event3.png" alt="Image 3"/></a></div>
-                <div class="isLog"><a href="#4"><img src="images/event/event4.png" alt="Image 4"/></a></div>
-                <div class="isLog"><a href="#5"><img src="images/event/event5.png" alt="Image 5"/></a></div>
+                <div class="block-image isOpen"><a href="#"><img src="images/event/event1.png" alt="Image 1"/></a></div>
+                <div class="block-image isLog"><a href="#"><img src="images/event/event2.png" alt="Image 2"/></a></div>
+                <div class="block-image isLog"><a href="#"><img src="images/event/event3.png" alt="Image 3"/></a></div>
+                <div class="block-image isLog"><a href="#"><img src="images/event/event4.png" alt="Image 4"/></a></div>
+                <div class="block-image isOver"><a href="#"><img src="images/event/event5.png" alt="Image 5"/></a></div>
               </div>
 
               <div class="promotion-block">
@@ -381,7 +381,7 @@
                 </div>
               </div>
             </div>
-            <div class="lost" style="background-image: url(images/question/lost-bg.png); display: inherit">
+            <div class="lost" style="background-image: url(images/question/lost-bg.png); display: none">
               <div class="row">
                 <div class="col-md-6">
                   <div class="content-block">
