Update question in frame 3

--- a/frame.html
+++ b/frame.html
@@ -93,7 +93,7 @@
 
             <h3 class="description-frame1">Qua từng mảnh ghép <br/> trong 28 ngày bất ngờ</h3>
 
-            <a class="view-gallery seq-next" href="#">Sưu tập mảnh ghép</a>
+            <a class="view-gallery-btn seq-next" href="#">Sưu tập mảnh ghép</a>
           </div>
         </div>
       </li>
@@ -114,16 +114,10 @@
             </div>
 
             <ul role="navigation" aria-label="Pagination" class="frame2-group seq-pagination">
-              <li>
-              </li>
-              <li>
-              </li>
-              <li>
-                <a class="btn-frame2 text-left" href="#">28 ngày bất ngờ</a>
-              </li>
-              <li>
-                <a class="btn-frame2 text-right" href="#">The crazy race</a>
-              </li>
+              <li></li>
+              <li></li>
+              <li><a class="btn-frame2 text-left" href="#">28 ngày bất ngờ</a></li>
+              <li><a class="btn-frame2 text-right" href="#">The crazy race</a></li>
             </ul>
 
             <div class="panel-group" role="tablist" aria-multiselectable="true" id="group-description">
@@ -441,18 +435,9 @@
               trung tâm thương maik Saigon Center vào ngày 14/8/2016 cùng với 1 người bạn của mình. Nhiều thử thách bất
               ngờ cùng các phần quà hấp dẫn chờ đón các bạn!</p>
 
-            <ul role="navigation" aria-label="Pagination" class="seq-pagination">
-              <li>
-              </li>
-              <li>
-                <a class="btn-frame4" href="#">Nội dung chương trình</a>
-              </li>
-              <li>
-                <a class="btn-frame4" href="#">Sưu tập mảnh ghép</a>
-              </li>
-              <li>
-              </li>
-            </ul>
+            <a class="btn-frame4 show-the-rule" href="#">Sưu tập mảnh ghép</a>
+
+            <a class="btn-frame4 seq-prev" href="#">Nội dung chương trình</a>
           </div>
         </div>
       </li>
@@ -525,6 +510,22 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
+</div>
+
+<div id="rules" class="dialog">
+  <div class="dialog-overlay"></div>
+  <div class="dialog-content">
+    <div class="dialog-header">
+      <i class="icon-lock"></i>
+
+      <h2 class="title-login">Mời bạn đăng nhập facebook <br/> trước khi trả lời câu hỏi</h2>
+      <i class="icon-facebook-dialog"></i>
+      <a href="#" class="btn-login-with-facebook"><span>Đăng nhập facebook</span></a>
+    </div>
+    <div class="dialog-footer">
+      <a href="#" class="close-dialog-login btn-close-login">Đóng</a>
     </div>
   </div>
 </div>
